[tool.poetry]
name = "repl-nix-aya-s-web-project-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_aya_s_web_project_1"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
